added header and started body

--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Product Langing Page in Plain HTML/CSS - BreatheCode</title>
-        <link rel="stylesheet" type="text/css" href="./style.css">
-    </head>
-    <body>
-        <p>Hello! Update this index.html file and the style.css to start seing changes on your website</p>
-    </body>
+  <head>
+    <title>Product Langing Page in Plain HTML/CSS - BreatheCode</title>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+  </head>
+  <body>
+    <header id="headercontainer">
+      <div id="logo">
+        <h3>SHOPSHOP</h3>
+      </div>
+      <nav class="right">
+        <a href="#">Products</a>
+        <a href="#">About</a>
+        <a href="#">My Account</a>
+        <a href="#">Cart(0)</a>
+      </nav>
+    </header>
+
+    <main>
+      <div class="header">
+        <a href="Home">Home</a>
+        <span>/</span>
+        <a href="Household_Plants">Household Plants </a>
+        <span>/</span>
+        <a href="Bonsai">Bonsai</a>
+      </div>
+      <div class="images"></div>
+      <div>
+        <div>
+          <h2>Bonsai</h2>
+          <h2>$19.99</h2>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
